syntax = "proto3";

option csharp_namespace = "Autoregistrar";

package registrar;

service Autoregistrar {
  rpc StartService (StartRequest) returns (StatusResponse);
  rpc StopService (StopRequest) returns (StatusResponse);
  rpc RequestStatus (Empty) returns (StatusResponse);
}

message StartRequest {
  int32 userId = 1;
}

message StopRequest {
  int32 userId = 1;
}

message Empty {
}

message StatusResponse {
  Status status = 1;
  optional int32 userId = 2;
}

enum Status {
  UNKNOWN = 0;
  STARTED = 1;
  STOPPED = 2;
  PENDING = 3;
}